--- a/microBiome.html
+++ b/microBiome.html
@@ -5,17 +5,16 @@
   </head>
   <body>
     <p>Microbiome Test Visualizations</p>
-    <a href="ATAQC.html">ATACQC</a>
-    <a href="/data/nellieShortData.html">Nellie Data</a>
-    <a href="nellieTreeMap.pdf">Nellie Tree Map</a>
-    <a href="nellieTreeGraph.pdf">Nellie Tree Graph</a>
-    <a href="sunBurstTest.html">sunBurstTest</a>
-    <a href="/data/nellieCirclePack.html">Nellie Circle Pack</a>
-    <a href="/data/sankeyExample.html">SankeyTest</a>
-    <!--#<a href="pancreasMinusSalivary.html">Pancreas vs Salivary</a>
-    #<a href="test.html">On the fly?</a>
-    #<a href="LowCovScorePath.html">lowCovPathSeq</a>
-    <a href="ATAQC.html">ATACQC</a>
-    #<a href="staticBurst.html">staticBurstTest</a>-->
-  </body> 
+    <a href="/ForDemo/floweryTree.pdf">Flowery Tree...thing</a>
+    <a href="/ForDemo/circlePackUnweighted.pdf">Unweighted, static circlepack</a>
+    <a href="/ForDemo/nellieInteractiveSunburst.html">Interactive Sunburst</a>
+    <a href="/ForDemo/interactiveCirclePack.html">Interactive circlepack</a>
+    <a href="/ForDemo/sankey.html">interactive sankey all reads by source</a>
+    <a href="/ForDemo/dendrogramCircular.pdf">dendrogram - circular</a>
+    <a href="/ForDemo/dendrogram.pdf">dendrogram</a>
+    <a href="/ForDemo/staticSunburst.pdf">static sunburst</a>
+    <a href="/ForDemo/nellieShortData.html">Example of the type of data we have</a>
+    <a href="/ForDemo/genusDonut.pdf">Donut plot at genus level (could do at any level)</a>
+    <a href="/ForDemo/treeMap.pdf">Treemap</a>
+   </body> 
 </html>
