--- a/microBiome.html
+++ b/microBiome.html
@@ -5,16 +5,16 @@
   </head>
   <body>
     <p>Microbiome Test Visualizations</p>
-    <a href="/ForDemo/floweryTree.pdf">Flowery Tree...thing</a>
-    <a href="/ForDemo/circlePackUnweighted.pdf">Unweighted, static circlepack</a>
-    <a href="/ForDemo/nellieInteractiveSunburst.html">Interactive Sunburst</a>
-    <a href="/ForDemo/interactiveCirclePack.html">Interactive circlepack</a>
-    <a href="/ForDemo/sankey.html">interactive sankey all reads by source</a>
-    <a href="/ForDemo/dendrogramCircular.pdf">dendrogram - circular</a>
-    <a href="/ForDemo/dendrogram.pdf">dendrogram</a>
-    <a href="/ForDemo/staticSunburst.pdf">static sunburst</a>
-    <a href="/ForDemo/nellieShortData.html">Example of the type of data we have</a>
-    <a href="/ForDemo/genusDonut.pdf">Donut plot at genus level (could do at any level)</a>
-    <a href="/ForDemo/treeMap.pdf">Treemap</a>
+    <br><a href="/ForDemo/floweryTree.pdf">Flowery Tree...thing</a>
+    <br><a href="/ForDemo/circlePackUnweighted.pdf">Unweighted, static circlepack</a>
+    <br><a href="/ForDemo/nellieInteractiveSunburst.html">Interactive Sunburst</a>
+    <br><a href="/ForDemo/interactiveCirclePack.html">Interactive circlepack</a>
+    <br><a href="/ForDemo/sankey.html">interactive sankey all reads by source</a>
+    <br><a href="/ForDemo/dendrogramCircular.pdf">dendrogram - circular</a>
+    <br><a href="/ForDemo/dendrogram.pdf">dendrogram</a>
+    <br><a href="/ForDemo/staticSunburst.pdf">static sunburst</a>
+    <br><a href="/ForDemo/nellieShortData.html">Example of the type of data we have</a>
+    <br><a href="/ForDemo/genusDonut.pdf">Donut plot at genus level (could do at any level)</a>
+    <br><a href="/ForDemo/treeMap.pdf">Treemap</a>
    </body> 
 </html>
