--- a/microBiome.html
+++ b/microBiome.html
@@ -5,15 +5,22 @@
   </head>
   <body>
     <p>Microbiome Test Visualizations</p>
-    <br><a href="/ForDemo/floweryTree.pdf">Flowery Tree...thing</a>
-    <br><a href="/ForDemo/circlePackUnweighted.pdf">Unweighted, static circlepack</a>
+    
+    <p>Basically we have non-dog reads from saliva samples mapped to a reference set of "pathogens."
+      <br>For data, we end up with a bunch of taxonomies with associated scores and read counts."</p>
+    <br><a href="/ForDemo/nellieShortData.html">Example of the type of data we have</a>
+    
+    <p>Since this could be thought of as a weighted hierarchy, I've been thinking about it in terms of trees/graphs.
+      <br>Interactive versions:</p>
     <br><a href="/ForDemo/nellieInteractiveSunburst.html">Interactive Sunburst</a>
     <br><a href="/ForDemo/interactiveCirclePack.html">Interactive circlepack</a>
     <br><a href="/ForDemo/sankey.html">interactive sankey all reads by source</a>
+    <p>Static Versions:</p>
+    <br><a href="/ForDemo/floweryTree.pdf">Flowery Tree...thing</a>
+    <br><a href="/ForDemo/circlePackUnweighted.pdf">Unweighted, static circlepack</a>
     <br><a href="/ForDemo/dendrogramCircular.pdf">dendrogram - circular</a>
     <br><a href="/ForDemo/dendrogram.pdf">dendrogram</a>
-    <br><a href="/ForDemo/staticSunburst.pdf">static sunburst</a>
-    <br><a href="/ForDemo/nellieShortData.html">Example of the type of data we have</a>
+    <br><a href="/ForDemo/staticSunburst.pdf">static sunburst unweighted</a>
     <br><a href="/ForDemo/genusDonut.pdf">Donut plot at genus level (could do at any level)</a>
     <br><a href="/ForDemo/treeMap.pdf">Treemap</a>
    </body> 
